[gd_scene format=3 uid="uid://cihjtbk4yn5bn"]

[ext_resource type="Script" uid="uid://dj2x81dxenl0f" path="res://ui/hud.gd" id="1_rbyyf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbyyf"]
bg_color = Color(1, 0, 0.023529412, 1)

[node name="Hud" type="CanvasLayer" unique_id=512347848]
script = ExtResource("1_rbyyf")

[node name="Control" type="Control" parent="." unique_id=518966013]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Control" unique_id=2129130455]
layout_mode = 0
offset_right = 200.0
offset_bottom = 30.0
theme_override_styles/fill = SubResource("StyleBoxFlat_rbyyf")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=606516924]
layout_mode = 0
offset_left = 1.0
offset_top = 31.0
offset_right = 98.0
offset_bottom = 81.0

[node name="Colors" type="Label" parent="Control/VBoxContainer" unique_id=785623749]
layout_mode = 2
text = "G > R > B > G"

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer" unique_id=1022811875]
layout_mode = 2

[node name="DeathScreen" type="Control" parent="." unique_id=1938613961]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DeathScreen" unique_id=998410478]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49803922)

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen" unique_id=1972359853]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DeathScreen/VBoxContainer" unique_id=954943300]
layout_mode = 2
text = "YOU DIED"

[node name="FinalScoreLabel" type="Label" parent="DeathScreen/VBoxContainer" unique_id=1529540741]
layout_mode = 2
text = "Score: 0"

[node name="RestartButton" type="Button" parent="DeathScreen/VBoxContainer" unique_id=350366359]
layout_mode = 2
text = "Try Again"
